| Summary: | ASTERISK-30002: app_meetme: Don't erroneously set global variables when channel is NULL | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-03-31 10:41:59 | Date Closed: | 2022-04-27 18:39:10 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_meetme |
| Versions: | 18.6.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | There is a bug in app_meetme where pbx_builtin_setvar_helper is used to set a status variable for a channel.
However, the SLA applications also use the meetme functions, which means that when these are used, chan is NULL and thus global variables are set, erroneously polluting the global variable namespace with nonsense. This fixes this by ensuring that these status variables are set only if a channel exists. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-03-31 10:41:59.665-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-04-27 18:39:11.073-0500 Change 18464 merged by Joshua Colp: app_meetme: Don't erroneously set global variables. [https://gerrit.asterisk.org/c/asterisk/+/18464|https://gerrit.asterisk.org/c/asterisk/+/18464] By: Friendly Automation (friendly-automation) 2022-04-27 18:39:35.929-0500 Change 18320 merged by Joshua Colp: app_meetme: Don't erroneously set global variables. [https://gerrit.asterisk.org/c/asterisk/+/18320|https://gerrit.asterisk.org/c/asterisk/+/18320] By: Friendly Automation (friendly-automation) 2022-04-27 18:40:14.233-0500 Change 18465 merged by Joshua Colp: app_meetme: Don't erroneously set global variables. [https://gerrit.asterisk.org/c/asterisk/+/18465|https://gerrit.asterisk.org/c/asterisk/+/18465] By: Friendly Automation (friendly-automation) 2022-04-27 18:40:38.592-0500 Change 18466 merged by Joshua Colp: app_meetme: Don't erroneously set global variables. [https://gerrit.asterisk.org/c/asterisk/+/18466|https://gerrit.asterisk.org/c/asterisk/+/18466] | ||